--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -634,7 +634,8 @@ autor:ahsan Contact Whatsup + skype +923014749625;
 .user_box_left_img{
     width: 60px !important;
     height: 60px !important;
-    border-radius: 50%;
+    border-radius: 5px;
+    object-fit: cover;
 }
 .user_box_center_heading{
     font-size: 18px;
@@ -658,10 +659,11 @@ autor:ahsan Contact Whatsup + skype +923014749625;
     box-shadow: 2px 3px 15px 0 rgba(0,0,0,0.05);
 }
 .usrMdlHdrB1HolderImg{
-    width: 86px;
-    height: 86px;
-    border-radius: 50%;
+    width: 170px;
+    height: 170px;
     margin-bottom: 20px;
+    object-fit: cover;
+    border-radius: 10px;
 }
 .usrMdlHdrB2{
     margin-bottom: 20px;
@@ -684,12 +686,12 @@ autor:ahsan Contact Whatsup + skype +923014749625;
 .usrMdlHdrB1ContntHdng{
     font-size: 20px;
     color: #3C3B3B;
-    margin-bottom: 30px;
+    margin-bottom: 5px;
 }
 .rcntVwMdlRow{
     column-gap: 10px;
     margin-bottom: 15px;
-    margin: auto auto 15px auto;
+    margin: auto auto 10px auto;
 }
 .rcntVwMdlRowP{
     font-size: 16px;
