--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -439,9 +439,9 @@ autor:ahsan Contact Whatsup + skype +923014749625;
     border-radius: 5px;
 }
 .ellipsis_circle{
-    width: 50px;
-    height: 50px;
-    border-radius: 50%;
+    width: 120px;
+    height: 120px;
+    border-radius: 7px;
     background-color: var(--white);
     box-shadow: 0 3px 20px 0 rgba(0,0,0,0.08);
     display: flex;
@@ -733,8 +733,9 @@ autor:ahsan Contact Whatsup + skype +923014749625;
 }
 /* order box end */
 .ellipsis_circle_img{
-    height: 26px;
-    width: auto;
+    height: 80%;
+    width: 80%;
+    object-fit: contain;
 }
 .dashboard_box_row_desc{
     font-size: 12px;
